# serializer version: 1
# name: TestActivateView.test_bad_oidc_params_400
  '''
  <main class="s-main" id="main" role="main">
  
              <section class="s-section pt-lg-3">
                  <div class="container">
                      <div class="row g-0 bg-white">
                          
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <div class="container container-messages">
                  
                      
  
  
                  
              </div>
  
              
      <div class="block-center">
          
              <h2>Error: invalid_request</h2>
              <p>Invalid client_id parameter value.</p>
          
      </div>
  
          </div>
      </div>
  
                          
      <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
          <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
      </div>
  
                      </div>
                  </div>
              </section>
  
          </main>
  '''
# ---
# name: TestActivateView.test_missing_user_info
  '''
  <main class="s-main" id="main" role="main">
  
              <section class="s-section pt-lg-3">
                  <div class="container">
                      <div class="row g-0 bg-white">
                          
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <div class="container container-messages">
                  
                      
  
  
                  
              </div>
  
              
      <div class="block-center">
          
              <h2>Error: invalid_request</h2>
              <p>Missing activation parameters</p>
          
      </div>
  
          </div>
      </div>
  
                          
      <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
          <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
      </div>
  
                      </div>
                  </div>
              </section>
  
          </main>
  '''
# ---
# name: TestAuthorizeView.test_bad_oidc_params_400
  '''
  <main class="s-main" id="main" role="main">
  
              <section class="s-section pt-lg-3">
                  <div class="container">
                      <div class="row g-0 bg-white">
                          
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <div class="container container-messages">
                  
                      
  
  
                  
              </div>
  
              
      <div class="block-center">
          
              <h2>Error: invalid_request</h2>
              <p>Invalid client_id parameter value.</p>
          
      </div>
  
          </div>
      </div>
  
                          
      <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
          <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
      </div>
  
                      </div>
                  </div>
              </section>
  
          </main>
  '''
# ---
# name: TestRegisterView.test_bad_oidc_params_400
  '''
  <main class="s-main" id="main" role="main">
  
              <section class="s-section pt-lg-3">
                  <div class="container">
                      <div class="row g-0 bg-white">
                          
      <div class="col-12 col-lg-6 bg-lg-white">
          <div class="bg-white p-3 py-lg-7 px-lg-8">
              <div class="container container-messages">
                  
                      
  
  
                  
              </div>
  
              
      <div class="block-center">
          
              <h2>Error: invalid_request</h2>
              <p>Invalid client_id parameter value.</p>
          
      </div>
  
          </div>
      </div>
  
                          
      <div class="d-none d-lg-flex col-lg-6 p-lg-6 justify-content-center align-items-center bg-light">
          <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-ic.svg"/>
      </div>
  
                      </div>
                  </div>
              </section>
  
          </main>
  '''
# ---
